--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 		<br><br><br><br><br><br><br>
 	</main>
 
-	<script>script.js</script>
-
+	<script src="script.js"></script>
+	
 	<main class="contenedor sombra">
 		<section>
 			<form id="formulario" class="formulario" onsubmit="return validarFormulario();">
